<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".subfragments.FragmentOne">

    <TextView
        android:id="@+id/tv_totalVehicles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/total_vehicles"
        android:textColor="#6b6b6b"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Total Vehicles" />

    <TextView
        android:id="@+id/tv_Percentage"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/lato"
        android:lineSpacingExtra="30.4sp"
        android:text="@string/_80"
        android:textColor="#ffffff"
        android:textSize="38sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_totalVehicles"
        tools:text="80%" />

    <TextView
        android:id="@+id/tv_noCapturedWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/_4"
        android:textColor="#d7d7d7"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Percentage"
        tools:text="4" />

    <TextView
        android:id="@+id/tv_textCapturedWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:ems="5"
        android:fontFamily="@font/lato"
        android:maxLines="2"
        android:text="@string/captured_this_weekk"
        android:textColor="@color/blueygrey"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/tv_noCapturedWeek"
        app:layout_constraintTop_toBottomOf="@+id/tv_Percentage"
        tools:text="CAPTURED THIS WEEK"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tv_noCapturedMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14.6dp"
        android:layout_marginTop="10dp"
        android:text="@string/_25"
        android:textColor="@color/very_light_pink"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_noCapturedWeek"
        tools:text="25" />

    <TextView
        android:id="@+id/tv_textCapturedMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:ems="6"
        android:fontFamily="@font/lato"
        android:maxLines="2"
        android:text="@string/captured_this_month"
        android:textColor="@color/blueygrey"
        android:textSize="8sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toRightOf="@id/tv_noCapturedMonth"
        app:layout_constraintTop_toBottomOf="@id/tv_textCapturedWeek"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="283dp"
        tools:text="CAPTURED THIS MONTH"
        tools:ignore="SmallSp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="135dp"
        android:layout_height="135dp"

        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/circle"

        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        tools:progress="60" />

    <TextView
        android:id="@+id/progressNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/_240_500"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar"
        tools:text="240/500" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />
</androidx.constraintlayout.widget.ConstraintLayout>